Mon Nov 21 14:43:14 1994  Theodore Y. Ts'o  (tytso@dcl)

	* func-proto.h (krb5_encode_kdc_rep, krb5_encrypt_tkt_part):
		Change to use new function prototypes.

	* encryption.h (krb5_eblock_keytype, krb5_eblock_enctype): Define
		new macros for finding the key type and encryption type of
		an encrypion block.

Fri Nov 18 17:53:38 1994  Theodore Y. Ts'o  (tytso@dcl)

	* kdb.h (KRB5_KDB_SUPPORT_DESMD5): Add new attribute which defines
		whether or not a server supports DES/MD5.

Fri Nov 18 01:28:47 1994  Mark Eichin  <eichin@cygnus.com>

	* Makefile.in (install): elide dependency so $(srcdir) works; use
	$(INSTALL_DATA).
	(ET_HEADERS): new variable for the names of the headers that
	lib/krb5/error_tables builds and installs here (so that they get
	pushed out to the installed include directory.)
	(BUILT_HEADERS): locally built headers, for all, install, and
	clean.
	(clean): delete built and et headers.

Fri Nov 18 01:15:00 1994  Mark Eichin  <eichin@cygnus.com>

	* configure.in: use KRB5_POSIX_LOCKS, AC_EGREP_HEADER. (from
	epeisach).

Thu Nov 10 22:04:19 1994  Theodore Y. Ts'o  (tytso@dcl)

	* hostaddr.h (krb5_address): Add magic number field.

Tue Nov  8 17:55:47 1994  Theodore Y. Ts'o  (tytso@dcl)

	* encryption.h (krb5_string_to_key, krb5_random_key): Change
		internal calling signature to pass in the encryption
		block, so that the encryption type in the keyblock
		structure can be properly initialized.

Thu Nov  3 16:38:44 1994  Theodore Y. Ts'o  (tytso@dcl)

	* encryption.h (krb5_keyblock): Added a field to hold an
		encryption type in the keyblock field --- so routines have
		a hint of which encryption type they should use.

	* error_def.h: Add support for the kv5m error table.  (For magic
		numbers.) 

Mon Oct 31 14:43:07 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Move WITH_CCOPTS and WITH_KRB5ROOT to the
		beginning of the file.  Otherwise the other tests won't
		get the CCOPTS flags correct while doing the feature
		tests. 
